--- a/paradox_alarm_interface_3.x/config.json
+++ b/paradox_alarm_interface_3.x/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Paradox Alarm Interface",
+  "name": "Paradox Alarm Interface - 2nd",
   "version": "3.1.0",
   "slug": "paradox_alarm_interface_3.x",
   "description": "Supports SP/MG/EVO, Serial and IP150 connections.",
